CSS/style.css
body {
    justify-content: center;
    display: block;
    margin: 0 auto;
    background-color: #389e47;
    font-family: Arial, Helvetica, sans-serif;
}

.dangerous {
    /*Styling for buttons which do dangerous - irreversible things*/
    background-color: red;
}

.centre {
    /*Forces item to be centre aligned*/
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}


/* Style the navigation menu - from https://www.w3schools.com/howto/howto_css_topnav_equal_width.asp 

-----Start---
*/

nav {
    width: 100%;
    background-color: #05b43f;
    overflow: hidden;
    text-align: center;
}


/* Navigation links */

nav a {
    padding: 12px;
    color: black;
    text-decoration: none;
    font-size: 17px;
    width: 25%;
    /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
    text-align: center;
    /* If you want the text to be centered */
}


/* Add a background color on mouse-over */

nav a:hover {
    background-color: #0b6d2c;
}


/* Add responsiveness - on screens less than 500px, make the navigation links appear on top of each other, instead of next to each other */

@media screen and (max-width: 500px) {
    nav a {
        float: none;
        display: block;
        width: 100%;
        text-align: left;
        /* If you want the text to be left-aligned on small screens */
    }
}


/*---------*/


/*
-
Button Styling
-
*/

.addbuttons {
    background-color: #2eb839;
}

.rembuttons {
    background-color: #c01834;
}

.addbuttons:hover {
    background-color: #17551c;
}

.rembuttons:hover {
    background-color: #700d1e;
}

.actionbuttons {
    display: block;
    width: 30%;
    border: 1px;
    padding: 14px 28px;
    font-size: 16px;
    border-radius: 3px;
    cursor: pointer;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

input[type="text"],
input[type="password"],
textarea {
    width: 20%;
    padding: 15px;
    margin: 5px 0 22px 0;
    border-radius: 3px;
    border: none;
    background: #f1f1f1;
}

input[type="text"]:focus,
input[type="password"]:focus,
textarea:focus,
input[type="number"]:focus,
.editbox:focus {
    background-color: #ddd;
    outline: none;
}


/*
For Admin edit textboxes
-important so it overrides unneeded css
*/

input[type="number"],
.editbox {
    width: max-content !important;
    padding: 0px 12px !important;
    box-sizing: border-box !important;
    border-radius: 4px !important;
    border: none !important;
}


/* input[type=number]:focus,
.editbox:focus {
    background-color: lightblue;
} */


/*End of admin textbox*/

select {
    padding: 16px 20px;
    border: none;
    border-radius: 4px;
    background-color: #f1f1f1;
}

input[type="button"],
input[type="submit"] {
    background-color: #4caf50;
    border-radius: 3px;
    border: none;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
}


/*
Table key
*/

.tablekey {
    position: fixed;
    left: 10px;
    bottom: 20px;
    opacity: .8;
}


/*
-
Table Styling
-
*/

table,
th,
td {
    border: 1px solid black;
    border-collapse: collapse;
}

td {
    padding: 5px;
    height: 100%;
}

th {
    background-color: #207928;
}

.tabletitle {
    background-color: darkcyan;
}

.tableentry {
    background-color: cyan;
}

.blank_row {
    height: 5px !important;
    /* overwrites any other rules */
    background-color: #000000;
}

.blank_td {
    background-color: #000000;
    height: 1px !important;
}

label {
    display: block;
    /* border: 1px solid #f00; - I couldn't figure out how to make the label fill the entire TD heighwise */
    min-height: 100%;
    /* for the latest browsers which support min-height */
    height: auto !important;
    /* for newer IE versions */
    height: 100%;
    width: 100%;
    /* the only height-related attribute that IE6 does not ignore  */
}

hr.seperator {
    border-top: 8px solid rgb(32, 117, 47);
    border-radius: 5px;
    width: 100%;
}

hr.seperator2 {
    border-top: 8px solid rgb(32, 117, 47);
    border-radius: 5px;
    width: 30%;
}


/*
Changes the scrollbar
*/

body::-webkit-scrollbar {
    width: 1em;
}

body::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

body::-webkit-scrollbar-thumb {
    background-color: darkgrey;
    outline: 1px solid slategrey;
}


/*
-
Error Styling
-
*/

.error {
    padding: 10px;
    font-size: large;
    background: green;
    color: white;
    position: fixed;
    bottom: 0px;
    width: 100%;
}

.error {
    -moz-animation: cssAnimation 6s ease-in;
    /* Firefox */
    -webkit-animation: cssAnimation 6s ease-in;
    /* Safari and Chrome */
    -o-animation: cssAnimation 6s ease-in;
    /* Opera */
    animation: cssAnimation 6s ease-in;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
}

@keyframes cssAnimation {
    0% {
        opacity: 0.9;
        display: block;
    }
    /* 60 sec : visible */
    30% {
        opacity: 0.8;
        display: block;
    }
    /* 62 sec : start fading out */
    55% {
        opacity: 0.7;
        display: block;
    }
    /* 63 sec : not visible */
    60% {
        opacity: 0;
        display: none;
    }
    /* 64 sec */
    100% {
        opacity: 0;
        display: none;
    }
}


/*

Tool tip text - shows competency description
Modified from https://www.w3schools.com/css/css_tooltip.asp

*/

.tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: max-content;
    word-wrap: break-word;
    max-width: 300px;
    background-color: rgb(0, 0, 0);
    opacity: 0.7;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 5px;
    /* Position the tooltip */
    position: absolute;
    z-index: 1000;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}


/*
Admin controls
*/

.inwindow-buttons {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    border-radius: 3px;
    display: block;
}

.inwindow {
    text-align: center;
    display: inline;
}

.adminbuttons {
    background-color: #008b8b;
}


/*
Name links in single + manager views
*/

.nameTag {
    color: #000000;
    text-decoration: none;
    border-bottom: 1px dotted black;
}


/*
Back to top button -- from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp
*/

#myBtn {
    display: none;
    /* Hidden by default */
    position: fixed;
    /* Fixed/sticky position */
    bottom: 20px;
    /* Place the button at the bottom of the page */
    right: 30px;
    /* Place the button 30px from the right */
    z-index: 99;
    /* Make sure it does not overlap */
    border: none;
    /* Remove borders */
    outline: none;
    /* Remove outline */
    background-color: red;
    /* Set a background color */
    color: white;
    /* Text color */
    cursor: pointer;
    /* Add a mouse pointer on hover */
    padding: 15px;
    /* Some padding */
    border-radius: 10px;
    /* Rounded corners */
    font-size: 18px;
    /* Increase font size */
}

#myBtn:hover {
    /*For the Go To Top button*/
    background-color: #555;
    /* Add a dark-grey background on hover */
}


/* 
Popup settings menu


Button used to open the contact form - fixed at the bottom of the page */

.open-button {
    background-color: #2eb839;
    color: black;
    padding: 16px 20px;
    font-weight: bold;
    border: none;
    cursor: pointer;
    opacity: 0.8;
    border-radius: 3px;
    width: max-content;
}


/* The popup form - hidden by default */

.form-popup {
    display: none;
    position: absolute;
    background-color: #389e47;
    border: 3px solid #256b30;
    z-index: 9;
}


/* Add styles to the form container */

.form-container {
    max-width: 300px;
    padding: 10px;
    background-color: #389e47;
}


/* Full-width input fields */

.form-container input[type="text"],
.form-container input[type="password"] {
    width: 90%;
    padding: 15px;
    margin: 5px 0 22px 0;
    border: none;
    background: #f1f1f1;
}


/* When the inputs get focus, do something */

.form-container input[type="text"]:focus,
.form-container input[type="password"]:focus {
    background-color: #ddd;
    outline: none;
}


/* Set a style for the submit/login button */

.form-container .btn {
    background-color: #04aa6d;
    color: white;
    padding: 16px 20px;
    border: none;
    cursor: pointer;
    width: 100%;
    margin-bottom: 10px;
    opacity: 0.8;
}


/* Add a red background color to the cancel button */

.form-container .cancel {
    background-color: red;
}


/* Add some hover effects to buttons */

.form-container .btn:hover,
.open-button:hover {
    opacity: 1;
}

